force-app/main/default/objects/CancelCalculate__c/CancelCalculate__c.object-meta.xml
<CustomObject>
    <label>解約精算</label>
    <nameField>
        <displayFormat>CC-{000000000}</displayFormat>
        <label>解約精算名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>