force-app/main/default/objects/CancelCalculate__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <formula>Account__r.AccountId__c</formula>
    <label>企業ID</label>
    <type>Text</type>
</CustomField>