force-app/main/default/objects/CancelCalculate__c/fields/AmortisationDepreciationRealEstateInfo__c.field-meta.xml
<CustomField>
    <fullName>AmortisationDepreciationRealEstateInfo__c</fullName>
    <formula>RealEstate__r.DepositAmortisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>敷引/償却（物件情報）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>