force-app/main/default/objects/CancelCalculate__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金元口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>BankAccountCancelCalculate</relationshipName>
    <type>Lookup</type>
</CustomField>