force-app/main/default/objects/CancelCalculate__c/fields/BankAccountNum__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNum__c</fullName>
    <formula>BankAccount__r.BankAccountNum__c</formula>
    <label>口座番号</label>
    <type>Text</type>
</CustomField>