force-app/main/default/objects/CancelCalculate__c/fields/Billing3__c.field-meta.xml
<CustomField>
    <fullName>Billing3__c</fullName>
    <label>請求先3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>