force-app/main/default/objects/CancelCalculate__c/fields/BillingDocumentReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>BillingDocumentReceiptDate__c</fullName>
    <label>請求書受領日</label>
    <type>Date</type>
</CustomField>