force-app/main/default/objects/CancelCalculate__c/fields/BillingRentOther3Amount__c.field-meta.xml
<CustomField>
    <fullName>BillingRentOther3Amount__c</fullName>
    <label>解約月請求その他3金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>