force-app/main/default/objects/CancelCalculate__c/fields/BillingRentOther4Fields__c.field-meta.xml
<CustomField>
    <fullName>BillingRentOther4Fields__c</fullName>
    <label>解約月請求その他4費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>