force-app/main/default/objects/CancelCalculate__c/fields/BorrowerPayTax8__c.field-meta.xml
<CustomField>
    <fullName>BorrowerPayTax8__c</fullName>
    <formula>ROUND( BorrowerPayTax8SubTotal__c * 0.08 ,0)</formula>
    <label>借主負担合計（内消費税_8％）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>