force-app/main/default/objects/CancelCalculate__c/fields/BorrowerPayTax8SubTotal__c.field-meta.xml
<CustomField>
    <fullName>BorrowerPayTax8SubTotal__c</fullName>
    <label>借主負担合計額消費税8%集計</label>
    <summarizedField>CalculateDetail__c.BorrowerPay__c</summarizedField>
    <summaryFilterItems>
        <field>CalculateDetail__c.TaxRate2__c</field>
        <operation>equals</operation>
        <value>8</value>
    </summaryFilterItems>
    <summaryForeignKey>CalculateDetail__c.CancelCancelCalculate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>