force-app/main/default/objects/CancelCalculate__c/fields/BorrowerPayTotal__c.field-meta.xml
<CustomField>
    <fullName>BorrowerPayTotal__c</fullName>
    <formula>BorrowerPaySubTotal__c + BorrowerPayTax8SubTotal__c</formula>
    <label>借主負担合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>