force-app/main/default/objects/CancelCalculate__c/fields/CalculateChargeHandoverItems__c.field-meta.xml
<CustomField>
    <fullName>CalculateChargeHandoverItems__c</fullName>
    <label>精算担当への引継ぎ事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>