force-app/main/default/objects/CancelCalculate__c/fields/CalculateChargeSettingDate__c.field-meta.xml
<CustomField>
    <fullName>CalculateChargeSettingDate__c</fullName>
    <label>担当割当日</label>
    <type>Date</type>
</CustomField>