force-app/main/default/objects/CancelCalculate__c/fields/CalculateChargeTeamPhone__c.field-meta.xml
<CustomField>
    <fullName>CalculateChargeTeamPhone__c</fullName>
    <formula>CancelCalculateTeam__r.Phone__c</formula>
    <label>精算担当チームTEL</label>
    <type>Text</type>
</CustomField>