force-app/main/default/objects/CancelCalculate__c/fields/CalculateCheckConfirmStatus__c.field-meta.xml
<CustomField>
    <fullName>CalculateCheckConfirmStatus__c</fullName>
    <formula>IF ( UncheckNum2__c &gt; 0, &apos;未チェックあり&apos;, &apos;未チェックなし&apos;)</formula>
    <label>精算チェック確認状況</label>
    <type>Text</type>
</CustomField>