force-app/main/default/objects/CancelCalculate__c/fields/CalculateCounterAccountName__c.field-meta.xml
<CustomField>
    <fullName>CalculateCounterAccountName__c</fullName>
    <formula>CalculateCounter__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>解約精算窓口取引先名</label>
    <type>Text</type>
</CustomField>