force-app/main/default/objects/CancelCalculate__c/fields/CalculateCounterEmail__c.field-meta.xml
<CustomField>
    <fullName>CalculateCounterEmail__c</fullName>
    <label>解約精算窓口メール</label>
    <type>Email</type>
</CustomField>