force-app/main/default/objects/CancelCalculate__c/fields/CalculateCounterPhone__c.field-meta.xml
<CustomField>
    <fullName>CalculateCounterPhone__c</fullName>
    <label>解約精算窓口TEL</label>
    <type>Phone</type>
</CustomField>