force-app/main/default/objects/CancelCalculate__c/fields/CalculateCounterStaffLastName__c.field-meta.xml
<CustomField>
    <fullName>CalculateCounterStaffLastName__c</fullName>
    <formula>CalculateCounterStaff__r.LastName</formula>
    <label>精算窓口担当者姓</label>
    <type>Text</type>
</CustomField>