force-app/main/default/objects/CancelCalculate__c/fields/CalculateDestination__c.field-meta.xml
<CustomField>
    <fullName>CalculateDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>精算相手先</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipName>LandlordCalculateDestination</relationshipName>
    <type>Lookup</type>
</CustomField>