force-app/main/default/objects/CancelCalculate__c/fields/CalculateEmployeeNote__c.field-meta.xml
<CustomField>
    <fullName>CalculateEmployeeNote__c</fullName>
    <label>社員連絡備考</label>
    <type>TextArea</type>
</CustomField>