force-app/main/default/objects/CancelCalculate__c/fields/CalculateFreeInvoiceContent__c.field-meta.xml
<CustomField>
    <fullName>CalculateFreeInvoiceContent__c</fullName>
    <label>精算フリー送付書内容</label>
    <type>TextArea</type>
</CustomField>