force-app/main/default/objects/CancelCalculate__c/fields/CalculateStayExceptDate__c.field-meta.xml
<CustomField>
    <fullName>CalculateStayExceptDate__c</fullName>
    <label>精算滞留除外日</label>
    <type>Date</type>
</CustomField>