force-app/main/default/objects/CancelCalculate__c/fields/CalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>CalculationMethod__c</fullName>
    <label>請求賃料計算方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>切り捨て</fullName>
            </value>
            <value>
                <fullName>切り上げ</fullName>
            </value>
            <value>
                <fullName>四捨五入</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>