force-app/main/default/objects/CancelCalculate__c/fields/CancelCalculateId__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculateId__c</fullName>
    <externalId>true</externalId>
    <label>解約精算ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>