force-app/main/default/objects/CancelCalculate__c/fields/CancelCalculateStaff__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculateStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約精算担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserCancelCalculateStaff</relationshipName>
    <type>Lookup</type>
</CustomField>