force-app/main/default/objects/CancelCalculate__c/fields/CancelCounter__c.field-meta.xml
<CustomField>
    <fullName>CancelCounter__c</fullName>
    <formula>CancelApprication__r.CancelCounter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>解約申入れ先</label>
    <type>Text</type>
</CustomField>