force-app/main/default/objects/CancelCalculate__c/fields/CancelCounterName__c.field-meta.xml
<CustomField>
    <fullName>CancelCounterName__c</fullName>
    <label>解約申入れ先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>