force-app/main/default/objects/CancelCalculate__c/fields/CancelCustodyManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>CancelCustodyManagementCharge__c</fullName>
    <label>解約月預かり管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>