force-app/main/default/objects/CancelCalculate__c/fields/CancelMonthBillingCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthBillingCommonCharge__c</fullName>
    <label>解約月請求共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>