force-app/main/default/objects/CancelCalculate__c/fields/CancelMonthBillingGarageCost__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthBillingGarageCost__c</fullName>
    <label>解約月請求駐車場代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>