force-app/main/default/objects/CancelCalculate__c/fields/CancelMonthCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthCommonCharge__c</fullName>
    <label>解約月預かり共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>