force-app/main/default/objects/CancelCalculate__c/fields/CancelMonthDailyAsManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthDailyAsManagementCharge__c</fullName>
    <label>日割管理費（自動計算）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>