force-app/main/default/objects/CancelCalculate__c/fields/CancelMonthDailyAssumptionGarage__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthDailyAssumptionGarage__c</fullName>
    <label>日割駐車場（自動計算）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>