force-app/main/default/objects/CancelCalculate__c/fields/CancelMonthRateParking__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthRateParking__c</fullName>
    <label>解約月預かり駐車場</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>