force-app/main/default/objects/CancelCalculate__c/fields/CancelVirtualCollectBankAccountNameKana__c.field-meta.xml
<CustomField>
    <fullName>CancelVirtualCollectBankAccountNameKana__c</fullName>
    <formula>Account__r.ServiceContractCancel__r.CancelCollectBankAccount__r.ContractorKana__c</formula>
    <label>解約V回収口座名義カナ</label>
    <type>Text</type>
</CustomField>