force-app/main/default/objects/CancelCalculate__c/fields/CancelVirtualCollectBankAccountNum__c.field-meta.xml
<CustomField>
    <fullName>CancelVirtualCollectBankAccountNum__c</fullName>
    <formula>Account__r.ServiceContractCancel__r.CancelCollectBankAccount__r.Name</formula>
    <label>解約V回収口座番号</label>
    <type>Text</type>
</CustomField>