force-app/main/default/objects/CancelCalculate__c/fields/CancelVirtualCollectBankAccountType__c.field-meta.xml
<CustomField>
    <fullName>CancelVirtualCollectBankAccountType__c</fullName>
    <formula>Account__r.ServiceContractCancel__r.CancelCollectBankAccount__r.DepositName__c</formula>
    <label>解約V回収口座種目</label>
    <type>Text</type>
</CustomField>