force-app/main/default/objects/CancelCalculate__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ケース</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>CaseCancelCalculate</relationshipName>
    <type>Lookup</type>
</CustomField>