force-app/main/default/objects/CancelCalculate__c/fields/ChargeInstructionItems__c.field-meta.xml
<CustomField>
    <fullName>ChargeInstructionItems__c</fullName>
    <label>担当への指示事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>