force-app/main/default/objects/CancelCalculate__c/fields/ChargeTeam__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>解約精算 (担当チーム)</relationshipLabel>
    <relationshipName>ChargeTeams</relationshipName>
    <type>Lookup</type>
</CustomField>