force-app/main/default/objects/CancelCalculate__c/fields/CompanyConsentDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyConsentDate__c</fullName>
    <label>企業承諾日</label>
    <type>Date</type>
</CustomField>