force-app/main/default/objects/CancelCalculate__c/fields/CompanyPayAmount__c.field-meta.xml
<CustomField>
    <fullName>CompanyPayAmount__c</fullName>
    <formula>BorrowerPayTotal__c  -  SelfPayAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>会社負担</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>