force-app/main/default/objects/CancelCalculate__c/fields/CompletedScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedScheduledDate__c</fullName>
    <label>完了予定日</label>
    <type>Date</type>
</CustomField>