force-app/main/default/objects/CancelCalculate__c/fields/ConstructionSubTotal__c.field-meta.xml
<CustomField>
    <fullName>ConstructionSubTotal__c</fullName>
    <formula>LenderPayTSubTotal__c + BorrowerPaySubTotal__c</formula>
    <label>工事合計額小計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>