force-app/main/default/objects/CancelCalculate__c/fields/ConstructionTax__c.field-meta.xml
<CustomField>
    <fullName>ConstructionTax__c</fullName>
    <formula>BorrowerPayTax8SubTotal__c + LenderPayTax8SubTotal__c</formula>
    <label>工事合計（内消費税）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>