force-app/main/default/objects/CancelCalculate__c/fields/ContractCansellationReturner__c.field-meta.xml
<CustomField>
    <fullName>ContractCansellationReturner__c</fullName>
    <label>受託解除返却者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>