force-app/main/default/objects/CancelCalculate__c/fields/ContractChangeAgreementDepositDealClause__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeAgreementDepositDealClause__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>精算合意書送付先担当名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>解約精算</relationshipLabel>
    <relationshipName>ContactChangeAgreementDepositDealClause</relationshipName>
    <type>Lookup</type>
</CustomField>