force-app/main/default/objects/CancelCalculate__c/fields/ContractChangeChargesConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeChargesConfirmDate__c</fullName>
    <label>名変手数料確認日</label>
    <type>Date</type>
</CustomField>