force-app/main/default/objects/CancelCalculate__c/fields/ContractorKana__c.field-meta.xml
<CustomField>
    <fullName>ContractorKana__c</fullName>
    <formula>BankAccount__r.ContractorKana__c</formula>
    <label>名義フリガナ</label>
    <type>Text</type>
</CustomField>