force-app/main/default/objects/CancelCalculate__c/fields/ContractReturnArrangemenDate__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnArrangemenDate__c</fullName>
    <label>契約書返却整理日</label>
    <type>Date</type>
</CustomField>