force-app/main/default/objects/CancelCalculate__c/fields/ContractReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnDate__c</fullName>
    <label>契約書返却日</label>
    <type>Date</type>
</CustomField>