force-app/main/default/objects/CancelCalculate__c/fields/ContractReturner__c.field-meta.xml
<CustomField>
    <fullName>ContractReturner__c</fullName>
    <label>契約書返却者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>