force-app/main/default/objects/CancelCalculate__c/fields/ContractReturnOrganizer__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnOrganizer__c</fullName>
    <label>契約書返却整理者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>