force-app/main/default/objects/CancelCalculate__c/fields/CorporateHousingStaff__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>解約精算 (社宅担当者)</relationshipLabel>
    <relationshipName>oMXp</relationshipName>
    <type>Lookup</type>
</CustomField>