force-app/main/default/objects/CancelCalculate__c/fields/CustodyRentOther1Fields__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentOther1Fields__c</fullName>
    <label>解約月預かりその他1費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>