force-app/main/default/objects/CancelCalculate__c/fields/CustodyRentOther2Fields__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentOther2Fields__c</fullName>
    <label>解約月預かりその他2費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>