force-app/main/default/objects/CancelCalculate__c/fields/CustodyRentOther3Fields__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentOther3Fields__c</fullName>
    <label>解約月預かりその他3費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>