force-app/main/default/objects/CancelCalculate__c/fields/CustodyRentOther4Amount__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentOther4Amount__c</fullName>
    <label>解約月預かりその他4金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>