force-app/main/default/objects/CancelCalculate__c/fields/DailyOther2AmountAutoCalc__c.field-meta.xml
<CustomField>
    <fullName>DailyOther2AmountAutoCalc__c</fullName>
    <label>日割その他2金額（自動計算）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>