force-app/main/default/objects/CancelCalculate__c/fields/DailyRateRepeatNote__c.field-meta.xml
<CustomField>
    <fullName>DailyRateRepeatNote__c</fullName>
    <label>日割繰返し備考</label>
    <type>TextArea</type>
</CustomField>