force-app/main/default/objects/CancelCalculate__c/fields/DDRHrTransferDate__c.field-meta.xml
<CustomField>
    <fullName>DDRHrTransferDate__c</fullName>
    <label>DDR人事転送日</label>
    <type>Date</type>
</CustomField>