force-app/main/default/objects/CancelCalculate__c/fields/DDRHrTransferer__c.field-meta.xml
<CustomField>
    <fullName>DDRHrTransferer__c</fullName>
    <label>DDR人事転送者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>