force-app/main/default/objects/CancelCalculate__c/fields/del_CalculateAmount__c.field-meta.xml
<CustomField>
    <fullName>del_CalculateAmount__c</fullName>
    <label>（不要）精算金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>