force-app/main/default/objects/CancelCalculate__c/fields/del_CancelMonthDailyManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>del_CancelMonthDailyManagementCharge__c</fullName>
    <label>（不要）日割管理費（自動計算）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>