force-app/main/default/objects/CancelCalculate__c/fields/DepositCheckComment__c.field-meta.xml
<CustomField>
    <fullName>DepositCheckComment__c</fullName>
    <label>敷金チェックコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>