force-app/main/default/objects/CancelCalculate__c/fields/DepositDifferentAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositDifferentAmount__c</fullName>
    <formula>DepositRefundScheduledAmount__c - DepositPaymentAmountTotal__c</formula>
    <label>返金不足額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>