force-app/main/default/objects/CancelCalculate__c/fields/DepositRealEstateInfo__c.field-meta.xml
<CustomField>
    <fullName>DepositRealEstateInfo__c</fullName>
    <formula>RealEstate__r.SecurityDeposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>敷金（物件情報）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>