force-app/main/default/objects/CancelCalculate__c/fields/DepositRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundAmount__c</fullName>
    <formula>Deposit__c - BorrowerPayTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>敷金返金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>