force-app/main/default/objects/CancelCalculate__c/fields/DepositRefundAutoUnavailableIs__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundAutoUnavailableIs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>敷金返金自動不可フラグ</label>
    <type>Checkbox</type>
</CustomField>