force-app/main/default/objects/CancelCalculate__c/fields/DepositRefundDate__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundDate__c</fullName>
    <label>敷金返金日</label>
    <type>Date</type>
</CustomField>