force-app/main/default/objects/CancelCalculate__c/fields/DepositRefundManual__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundManual__c</fullName>
    <formula>ServiceContractCancel__r.DepositRefundManual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>サービス項目は整理中。SNT側で対応する。</inlineHelpText>
    <label>敷金返金マニュアル</label>
    <type>Text</type>
</CustomField>