force-app/main/default/objects/CancelCalculate__c/fields/DepositRefundScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundScheduledDate__c</fullName>
    <label>敷金返金予定日</label>
    <type>Date</type>
</CustomField>