force-app/main/default/objects/CancelCalculate__c/fields/DepositRefundScheduledDateProgressDays__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundScheduledDateProgressDays__c</fullName>
    <formula>DepositRefundScheduledDate__c - TODAY()</formula>
    <label>敷金返金予定日経過日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>