force-app/main/default/objects/CancelCalculate__c/fields/DestructionRequestDate__c.field-meta.xml
<CustomField>
    <fullName>DestructionRequestDate__c</fullName>
    <label>破棄依頼日</label>
    <type>Date</type>
</CustomField>