force-app/main/default/objects/CancelCalculate__c/fields/DetailCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>DetailCreatedBy__c</fullName>
    <label>明細作成者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>