force-app/main/default/objects/CancelCalculate__c/fields/DetailCreateSpan__c.field-meta.xml
<CustomField>
    <fullName>DetailCreateSpan__c</fullName>
    <formula>ServiceContractCancel__r.DetailCreateSpan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>サービス項目は整理中。SNT側で対応する。</inlineHelpText>
    <label>明細作成スパン</label>
    <type>Text</type>
</CustomField>