force-app/main/default/objects/CancelCalculate__c/fields/DetailManagementDepartmentSender__c.field-meta.xml
<CustomField>
    <fullName>DetailManagementDepartmentSender__c</fullName>
    <label>明細管理部送付者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>