force-app/main/default/objects/CancelCalculate__c/fields/DetailManagementDepartmentSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>DetailManagementDepartmentSubmitDate__c</fullName>
    <label>明細管理部提出日</label>
    <type>Date</type>
</CustomField>