force-app/main/default/objects/CancelCalculate__c/fields/DifferenceProcessAmount__c.field-meta.xml
<CustomField>
    <fullName>DifferenceProcessAmount__c</fullName>
    <label>差額処理額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>