force-app/main/default/objects/CancelCalculate__c/fields/DifferenceProcessDate__c.field-meta.xml
<CustomField>
    <fullName>DifferenceProcessDate__c</fullName>
    <label>差額処理日</label>
    <type>Date</type>
</CustomField>