force-app/main/default/objects/CancelCalculate__c/fields/DifferenceProcessMemo__c.field-meta.xml
<CustomField>
    <fullName>DifferenceProcessMemo__c</fullName>
    <label>差額処理メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>