force-app/main/default/objects/CancelCalculate__c/fields/DifferenceProcessMethod__c.field-meta.xml
<CustomField>
    <fullName>DifferenceProcessMethod__c</fullName>
    <label>差額処理方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>