force-app/main/default/objects/CancelCalculate__c/fields/EmployeeConsentDate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeConsentDate__c</fullName>
    <label>社員承諾日</label>
    <type>Date</type>
</CustomField>