force-app/main/default/objects/CancelCalculate__c/fields/EmployeeNotifyor__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNotifyor__c</fullName>
    <label>社員通知者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>