force-app/main/default/objects/CancelCalculate__c/fields/EmployeePaymentScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>EmployeePaymentScheduledDate__c</fullName>
    <label>社員支払い予定日</label>
    <type>Date</type>
</CustomField>