force-app/main/default/objects/CancelCalculate__c/fields/ExpenseDeposits__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDeposits__c</fullName>
    <label>敷引/償却</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>