force-app/main/default/objects/CancelCalculate__c/fields/ExpenseDepositsDepreciationCheckComment__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDepositsDepreciationCheckComment__c</fullName>
    <label>敷引/償却チェックコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>