force-app/main/default/objects/CancelCalculate__c/fields/ForCalcFax__c.field-meta.xml
<CustomField>
    <fullName>ForCalcFax__c</fullName>
    <label>精算用_FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>