force-app/main/default/objects/CancelCalculate__c/fields/ForCompanyComment__c.field-meta.xml
<CustomField>
    <fullName>ForCompanyComment__c</fullName>
    <label>企業向けコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>