force-app/main/default/objects/CancelCalculate__c/fields/GoodsIssueRequester__c.field-meta.xml
<CustomField>
    <fullName>GoodsIssueRequester__c</fullName>
    <label>出庫依頼者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>