force-app/main/default/objects/CancelCalculate__c/fields/IndividualDefraymentConfirm__c.field-meta.xml
<CustomField>
    <fullName>IndividualDefraymentConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>個人負担確認</label>
    <type>Checkbox</type>
</CustomField>