force-app/main/default/objects/CancelCalculate__c/fields/IsApprovedContactAutoUnavailable__c.field-meta.xml
<CustomField>
    <fullName>IsApprovedContactAutoUnavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>承認後連絡自動不可フラグ</label>
    <type>Checkbox</type>
</CustomField>