force-app/main/default/objects/CancelCalculate__c/fields/IsBillingRecordCreate__c.field-meta.xml
<CustomField>
    <fullName>IsBillingRecordCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求レコード作成フラグ</label>
    <type>Checkbox</type>
</CustomField>