force-app/main/default/objects/CancelCalculate__c/fields/IsCalculateCheckProblem__c.field-meta.xml
<CustomField>
    <fullName>IsCalculateCheckProblem__c</fullName>
    <formula>IF ( CalculateCheckNgNum2__c &gt; 0, &apos;NGあり&apos;, &apos;NGなし&apos;)</formula>
    <label>精算チェック問題有無</label>
    <type>Text</type>
</CustomField>