force-app/main/default/objects/CancelCalculate__c/fields/IsCalculateCounterAutoNotice__c.field-meta.xml
<CustomField>
    <fullName>IsCalculateCounterAutoNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>精算窓口自動通知不可</label>
    <type>Checkbox</type>
</CustomField>