force-app/main/default/objects/CancelCalculate__c/fields/IsCalculateCounterAutoNoticeMaster__c.field-meta.xml
<CustomField>
    <fullName>IsCalculateCounterAutoNoticeMaster__c</fullName>
    <formula>CalculateCounter__r.Account__r.IsAutoNotice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>精算窓口自動通知不可（マスタ）</label>
    <type>Checkbox</type>
</CustomField>