force-app/main/default/objects/CancelCalculate__c/fields/IsClosing__c.field-meta.xml
<CustomField>
    <fullName>IsClosing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>締めフラグ</label>
    <type>Checkbox</type>
</CustomField>