force-app/main/default/objects/CancelCalculate__c/fields/IsConfirmed__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>確認済</label>
    <type>Checkbox</type>
</CustomField>