force-app/main/default/objects/CancelCalculate__c/fields/IsDataLinked__c.field-meta.xml
<CustomField>
    <fullName>IsDataLinked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>データ連携済</label>
    <type>Checkbox</type>
</CustomField>