force-app/main/default/objects/CancelCalculate__c/fields/IsDataOffer__c.field-meta.xml
<CustomField>
    <fullName>IsDataOffer__c</fullName>
    <formula>Account__r.ServiceContractAll__r.IsDataOffer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>データ提供有無</label>
    <type>Checkbox</type>
</CustomField>