force-app/main/default/objects/CancelCalculate__c/fields/IsDepositRefundAutoReminder__c.field-meta.xml
<CustomField>
    <fullName>IsDepositRefundAutoReminder__c</fullName>
    <formula>DepositRefundScheduledDate__c = TODAY()  -   $Setup.ReminderSetting__c.IsDepositRefundAutoReminder__c</formula>
    <label>敷金返金自動督促対象フラグ</label>
    <type>Checkbox</type>
</CustomField>