force-app/main/default/objects/CancelCalculate__c/fields/IsPaymentCheck__c.field-meta.xml
<CustomField>
    <fullName>IsPaymentCheck__c</fullName>
    <formula>DepositRefundScheduledAmount__c &gt; DepositPaymentAmountTotal__c</formula>
    <label>入金確認フラグ</label>
    <type>Checkbox</type>
</CustomField>