force-app/main/default/objects/CancelCalculate__c/fields/IsQuotationDunningExecution__c.field-meta.xml
<CustomField>
    <fullName>IsQuotationDunningExecution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>見積督促実行フラグ</label>
    <type>Checkbox</type>
</CustomField>