force-app/main/default/objects/CancelCalculate__c/fields/IsReapplication2PaymentCostChange__c.field-meta.xml
<CustomField>
    <fullName>IsReapplication2PaymentCostChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再申請②支払費用の変更有無</label>
    <type>Checkbox</type>
</CustomField>