force-app/main/default/objects/CancelCalculate__c/fields/IsReapplication3CollectCost__c.field-meta.xml
<CustomField>
    <fullName>IsReapplication3CollectCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再申請③回収費用の有無</label>
    <type>Checkbox</type>
</CustomField>